# Intelligent-Customer-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  qian.html  summary.md  文案生成系统的二次开发.md  智能客服管理系统详解.docx  智能客服管理系统详解.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ModuleDashboard.tsx  TabNavigation.tsx
frontend/src/hooks/: useTab.ts
frontend/src/pages/: CSTemplatePage.tsx  ChatHistoryPage.tsx  ChatPage.tsx  CopywritingChatPage.tsx  KnowledgeAIPage.tsx  KnowledgeDocPage.tsx  KnowledgeNewPage.tsx  KnowledgeUploadPage.tsx  StoreConfigPage.tsx  TransferPage.tsx
frontend/src/services/: api.ts
src/: config.py
src/agents/: __init__.py  chat_agent.py  copywriting_agent.py  copywriting_workflow_agent.py  llm.py  state.py
src/database/: __init__.py  chroma.py  init_db.py  postgres.py  redis.py
src/models/: __init__.py  conversation.py  copywriting_session.py  dialog.py  knowledge_base.py  template.py  transfer_rule.py
src/routers/: chat.py  conversation.py  copywriting_workflow.py  dialog.py  knowledge.py  template.py  transfer.py
src/schemas/: chat.py  conversation.py  copywriting_workflow.py  dialog.py  knowledge_base.py  template.py  transfer_rule.py
src/services/: __init__.py  copywriting_service.py  dialog_service.py  knowledge_service.py  memory_service.py  template_service.py
src/utils/: __init__.py  file_parser.py
(+1 files in other folders)
