[project]
name = "intelligent-customer-agent"
version = "0.1.0"
description = "电商智能客服系统 - AI-powered customer service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "alembic>=1.13.0",
    "aiofiles>=24.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "httpx>=0.27.0",
    "langchain-text-splitters>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
